--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@
                             v.setAttribute('src', 'Kavan.mp4');
                             v.setAttribute('controls', 'true');
                             var v1 = document.getElementById('v');
-                            v1.append(v);
+                            v1.append(v); 
+                            btn.style.display = 'none'; 
                         };
-                    }, 2000);
+                    }, 3000);
                 }
                 else {
                     h.innerHTML = j;
