--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                     setTimeout(() => {
                         var btn = document.createElement('button');
                         btn.innerHTML = 'Click Me';
+                        btn.setAttribute("class", "btn btn-outline-info btn-lg btn-block");
                         document.getElementById('btn').append(btn);
                         btn.onclick = () => {
                             h.style.display = 'none';
