--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             font-size: 30vw;
             text-align: center;
         }
-        button {
+        but {
             background: none;
             color: cyan;
             font-size: larger;
