--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                         var btn = document.createElement('button');
                         btn.innerHTML = 'Click Me';
                         btn.setAttribute("class", "btn btn-outline-info btn-lg btn-block");
+                        btn.style.width = "100%";
                         document.getElementById('btn').append(btn);
                         btn.onclick = () => {
                             h.style.display = 'none';
